--- a/MainProject/MVPv5/MVPv5.Client/_Imports.razor
+++ b/MainProject/MVPv5/MVPv5.Client/_Imports.razor
@@ -9,5 +9,5 @@
 @using MVPv5.Client
 @using MVPv5.Client.Layout
 @using MVPv5.Core
-@using MVPv5.Application.Contracts
 @inject HttpClient httpClient
+@inject NavigationManager NavigationManager
