--- a/MainProject/MVPv5/MVPv5.Client/App.razor
+++ b/MainProject/MVPv5/MVPv5.Client/App.razor
@@ -4,6 +4,7 @@
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
+        @* TODO - сделать что нибудь по-красивее *@
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="null">
             <p role="alert">Sorry, there's nothing at this address.</p>
