--- a/MainProject/MVPv5/MVPv5.Client/Pages/Test-dont-touch2.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Test-dont-touch2.razor
@@ -17,7 +17,7 @@
     }
 </ul>
 
-
+@inject HttpClient httpClient
 @using MVPv5.Application.Contracts.Document.v1
 @code {
     @using MVPv5.Application.Contracts.Template.v1;
