--- a/MainProject/MVPv5/MVPv5.Client/App.razor
+++ b/MainProject/MVPv5/MVPv5.Client/App.razor
@@ -1,13 +1,12 @@
 ﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="null" />
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(UpperPanel)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
-        @* TODO - сделать что нибудь по-красивее *@
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="null">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <p role="alert">Страницы не существует.</p>
         </LayoutView>
     </NotFound>
 </Router>
