--- a/MainProject/MVPv5/MVPv5.Client/Pages/Login.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Login.razor
@@ -38,6 +38,8 @@
 </div>
 
 
+@inject HttpClient httpClient
+@inject NavigationManager NavigationManager
 @code {
     @using MVPv5.Application.Contracts.User.v1
     public String? hashLogin { get; set; }
@@ -49,15 +51,14 @@
         var token = new CancellationTokenSource(3000);
         var response = await httpClient.PostAsJsonAsync("User/check", loginedUser, token.Token);
 
-        // получить ID и передавать его между страницами?
-        // да, передавать логин и пароль через запрос (не показывается в URL?)
-        // таким образом при каждом заходе на страницы будут подтягиваться данные о пользователе
+        // TODO - переделать
         // в идеале сделать через Куки, но мы Маслята, не забываем ;)
 
         if (response.IsSuccessStatusCode)
         {
-            hashLogin = loginedUser.Login;
-            NavigationManager.NavigateTo(hashLogin + "/editor");
+            // hashLogin = loginedUser.Login;
+            // NavigationManager.NavigateTo(hashLogin + "/editor");
+            NavigationManager.NavigateTo("/main");
         }
         else
         {
