--- a/MainProject/MVPv5/MVPv5.Client/Pages/Registration.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Registration.razor
@@ -40,6 +40,8 @@
 </div>
 
 
+@inject HttpClient httpClient
+@inject NavigationManager NavigationManager
 @code {
     @using MVPv5.Application.Contracts.User.v1
 
@@ -56,10 +58,11 @@
 
         if (response.IsSuccessStatusCode)
         {
-            login = createdUser.Login;
-            password = createdUser.Password;
+            // login = createdUser.Login;
+            // password = createdUser.Password;
 
-            NavigationManager.NavigateTo("/editor?login="+login);
+            // NavigationManager.NavigateTo("/editor?login="+login);
+            NavigationManager.NavigateTo("/main");
         }
         else
         {
