--- a/MainProject/MVPv5/MVPv5.Client/Menu/Main.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Menu/Main.razor
@@ -7,11 +7,13 @@
 Выберите действие
 
 <div class="form-control">
-    <button class="btn btn-outline-secondary mb-2" @onclick="ToEditor">В редактор</button>
-    <button class="btn btn-outline-secondary mb-2" @onclick="ToTemplates">Шаблоны...</button>
+    @* <button class="btn btn-outline-secondary mb-2" @onclick="ToEditor">В редактор</button> *@
+    <button type="button" class="btn btn-outline-secondary mb-2" @onclick="ToTemplates">Шаблоны...</button>
+    <button type="button" class="btn btn-outline-secondary mb-2" @onclick="ToDocuments">Документы...</button>
 </div>
 
 @code{
     private void ToEditor() => NavigationManager.NavigateTo("/editor");
     private void ToTemplates() => NavigationManager.NavigateTo("/templates");
+    private void ToDocuments() => NavigationManager.NavigateTo("/documents");
 }
